--- a/chapter9.css
+++ b/chapter9.css
@@ -15,7 +15,7 @@ main {
   display: flex;
 }
 
-.contents-item {
+.step-box {
   width: 300px;
   margin-right:30px;
   background-color: #eee;
@@ -23,42 +23,42 @@ main {
   padding: 10px;
 }
 
-.contents-item:last-child {
+.step-box:last-child {
   margin-right: 0;
 }
 
-.contents-item-image1 {
+.step-img1 {
   height: 150px;
   background-image: url(img/flow01.png);
   background-size: cover;
   background-position: bottom;
 }
 
-.contents-item-image2 {
+.step-img2 {
   height: 150px;
   background-image: url(img/flow02.png);
   background-size: cover;
   background-position: bottom;
 }
 
-.contents-item-image3 {
+.step-img3 {
   height: 150px;
   background-image: url(img/flow03.png);
   background-size: cover;
   background-position: bottom;
 }
 
-.title {
-  margin: 15px 0 5px;
-}
-
-span {
+.step-num {
   display: inline-block;
   background-color: #ff9a4b;
   position: absolute;
   top: 0;
   left: 0;
   color: #fff;
+}
+
+.title {
+  margin: 15px 0 5px;
 }
 
 footer {
@@ -77,12 +77,12 @@ footer {
     flex-direction: column;
   }
 
-  .contents-item {
+  .step-box {
     width: 90%;
     margin: 0px auto 20px;
   }
 
-  .contents-item:last-child {
+  .step-box:last-child {
     margin: 0 auto;
   }
 
